--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World</title>
+    <title>Gamer's World</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 class="reverse">Hello World</h1>
+    <h1 class="reverse">Welcom thou user</h1>
     <p>
-      Here is a paragraph that contains a few sentences of content.
+      𝔚𝔢𝔩𝔠𝔬𝔪 𝔱𝔬 𝔊𝔞𝔪𝔢𝔯'𝔰 𝔚𝔬𝔯𝔩𝔡, 𝔱𝔥𝔦𝔰 𝔦𝔰 𝔴𝔥𝔢𝔯𝔢 𝔶𝔬𝔲𝔩𝔩 𝔤𝔢𝔱 𝔈𝔭𝔦𝔠 𝔊𝔞𝔪𝔢𝔯 𝔗𝔦𝔭𝔰.
     </p>
+    <p>
+    𝕳𝖊𝖗𝖊 𝖆𝖗𝖊 𝖘𝖔𝖒𝖊 𝖍𝖊𝖑𝖕𝖋𝖚𝖑 𝖙𝖎𝖕𝖘 𝖋𝖔𝖗 𝖊𝖕𝖎𝖈 𝖌𝖆𝖒𝖊𝖗𝖘 𝖑𝖎𝖐𝖊 𝖞𝖔𝖚𝖗𝖘𝖊𝖑𝖋( ͡° ͜ʖ ͡°)
+    </p>
+    <p>
+    </p>
+    <img src ="https://i.kym-cdn.com/photos/images/original/001/506/561/2b6.jpeg" width="300" height="300">
+    <a href="https://www.google.com">Go To Google</a>
   </body>
 </html>
