--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
   <body>
     <h1 class="reverse">Welcom thou user</h1>
     <p>
-      𝔚𝔢𝔩𝔠𝔬𝔪 𝔱𝔬 𝔊𝔞𝔪𝔢𝔯'𝔰 𝔚𝔬𝔯𝔩𝔡, 𝔱𝔥𝔦𝔰 𝔦𝔰 𝔴𝔥𝔢𝔯𝔢 𝔶𝔬𝔲𝔩𝔩 𝔤𝔢𝔱 𝔈𝔭𝔦𝔠 𝔊𝔞𝔪𝔢𝔯 𝔗𝔦𝔭𝔰.
+      Welcome to Gamer's World, this is were Epic Gamers get epic game tips.
     </p>
     <p>
-    𝕳𝖊𝖗𝖊 𝖆𝖗𝖊 𝖘𝖔𝖒𝖊 𝖍𝖊𝖑𝖕𝖋𝖚𝖑 𝖙𝖎𝖕𝖘 𝖋𝖔𝖗 𝖊𝖕𝖎𝖈 𝖌𝖆𝖒𝖊𝖗𝖘 𝖑𝖎𝖐𝖊 𝖞𝖔𝖚𝖗𝖘𝖊𝖑𝖋( ͡° ͜ʖ ͡°)
+    Here are some helpful tips for Epic Gamers like yourself( ͡° ͜ʖ ͡°)
     </p>
     <p>
+      Number 1. Get Good
     </p>
     <img src ="https://i.kym-cdn.com/photos/images/original/001/506/561/2b6.jpeg" width="300" height="300">
-    <a href="https://www.google.com">Go To Google</a>
+    <p> 
+      Thanks for Visiting
+    </p>
+    <p>
+      <a href="https://www.google.com">Pleas, Leave the forge</a>
+    </p>
   </body>
 </html>
