--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 class="reverse">Welcom thou user</h1>
+    <h1 class="reverse">𝖂𝖊𝖑𝖈𝖔𝖒 𝖙𝖍𝖔𝖚 𝖚𝖘𝖊𝖗!</h1>
     <p>
       Welcome to Gamer's World, this is were Epic Gamers get epic game tips.
     </p>
@@ -20,7 +20,7 @@
       Thanks for Visiting
     </p>
     <p>
-      <a href="https://www.google.com">Pleas, Leave the forge</a>
+      <a href="https://www.google.com">Pleas, Leave the Forge🚪</a>
     </p>
   </body>
 </html>
