--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Here are some helpful tips for Epic Gamers like yourself ( ͡° ͜ʖ ͡°)
     </p>
     <p>
-      Number 1. Get Good
+      No.1 :Get Good
     </p>
     <img src ="https://i.kym-cdn.com/photos/images/original/001/506/561/2b6.jpeg" width="300" height="300">
     <p> 
